# wasm-jit

./: CMakeLists.txt  README.md  grade.sh  main.cpp
inc/: CodeReader.h  SinglePassCompiler.h  instance.h  interpreter.h  ir.h  ptx_assmbler.h  ptx_compiler.h  utils.h  wasmdefs.h
src/: CodeReader.cpp  instance.cpp  interpreter.cpp  ptx_assembler.cpp  ptx_compiler.cpp  single_pass_compiler.cpp  utils.cpp
study/: makefile  simpleVectorAddition.c
tests/: Makefile
tests/ctests/: cmain_double.c  cmain_int.c
tests/wattests/: memoryops.wat  vector_add.wat
tests_wasm2ptx/: CMakeLists.txt  benchmark.cc  cuda2ptx.py  test.h
tests_wasm2ptx/cuda/: matmul.cu  matmul_shared.cu  relu.cu  row_sum.cu  softmax.cu
tests_wasm2ptx/ptx/: matmul.ptx  matmul_shared.ptx  relu.ptx  row_sum.ptx  softmax.ptx  vector_add.ptx
tests_wasm2ptx/ptx_ground_truth/: matmul_basic.ptx  matmul_shared.ptx  relu.ptx  row_sum.ptx  softmax.ptx  softmax_basic.ptx  softmax_shared_mem.ptx  vector_add.ptx
tests_wasm2ptx/test_cases/: test_matmul.cu  test_relu.cu  test_rowsum.cu  test_softmax.cu  test_vector_add.cu
tests_wasm2ptx/wattests/: matmul.wat  relu.wat  row_sum.wat  softmax.wat  vector_add.wat
